--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "discord-player": "^5.4.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "ytdl-core": "^4.11.2"
+    "ffmpeg": "^0.0.4",
+    "ytdl-core": "^4.11.2",
+    "ytsr": "^3.8.0"
   }
 }
